--- a/designlayout.yaml
+++ b/designlayout.yaml
@@ -22,7 +22,7 @@ api:
 
 ota:
   password: "d914193e08e3fb4f1b8b49738565c234"
-  
+
 font:
   - file: 'fonts/Roboto-Regular.ttf'
     id: font_regular
@@ -59,8 +59,15 @@ font:
     size: 80
     glyphs:
       ['&', '@', '!', ',', '.', '"', '%', '’','(', ')', '+', '-', '_', ':', '°', '0',
-       '1', '2', '3', '4', '5', '6', '7', '8', '9']    
-    
+       '1', '2', '3', '4', '5', '6', '7', '8', '9']  
+
+  - file: 'fonts/KleeOne-SemiBold.ttf'
+    id: jaweekfont
+    size: 85
+    glyphs:
+      ['月','火','水','木','金','土','日']    
+
+
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password    
@@ -119,20 +126,54 @@ display:
 
     lambda: |-
       ESP_LOGI("display", "Updating...");
-      // OUTSIDE
-      //it.line(0, 0, 100, 50);
+
+      int Ycenter = 240;
+      int jawY = 260;
+      int enwY = 365;
     
       //Linee Verticali
-      it.line(240, 20, 240, 150);
-      it.line(240, 390, 240, 530);
+      it.line(Ycenter, 20, Ycenter, 150);
+      it.line(Ycenter, 390, Ycenter, 530);
       //Linee Orizzontali
       it.line(20, 270, 120, 270);
-
       it.line(360, 270, 460, 270);
 
-      it.circle(240, 270, 100);
+      it.circle(Ycenter, 270, 70);
 
-      it.filled_rectangle(40, 650, 400, 7);
+      //it.printf(Ycenter, 250, id(jaweekfont), TextAlign::CENTER, "月");
 
+      it.filled_rectangle(40, 665, 400, 6);
 
-      it.strftime(240, 730 , id(clockfont), TextAlign::CENTER, "%H:%M", id(homeassistant_time).now());
+      //data
+      it.strftime(Ycenter, 175 , id(font_medium_28), TextAlign::CENTER, "%b %d - %A", id(homeassistant_time).now());
+      
+      //giorno settimana
+      //it.strftime(Ycenter, enwY, id(font_medium_28), TextAlign::CENTER, "%B %A", id(homeassistant_time).now());
+
+      //ora
+      it.strftime(Ycenter, 730 , id(clockfont), TextAlign::CENTER, "%H:%M", id(homeassistant_time).now());
+      
+
+      auto time_now = id(homeassistant_time).now().day_of_week;
+        if (id(homeassistant_time).now().day_of_week == 1){ 
+          it.printf(Ycenter, jawY, id(jaweekfont), TextAlign::CENTER, "日");
+        }      
+        if (id(homeassistant_time).now().day_of_week == 2){ 
+          it.printf(Ycenter, jawY, id(jaweekfont), TextAlign::CENTER, "月");
+        }
+        if (id(homeassistant_time).now().day_of_week == 3){ 
+          it.printf(Ycenter, jawY, id(jaweekfont), TextAlign::CENTER, "火");
+        }      
+        if (id(homeassistant_time).now().day_of_week == 4){ 
+          it.printf(Ycenter, jawY, id(jaweekfont), TextAlign::CENTER, "水");
+        }
+        if (id(homeassistant_time).now().day_of_week == 5){ 
+          it.printf(Ycenter, jawY, id(jaweekfont), TextAlign::CENTER, "木");
+        }      
+        if (id(homeassistant_time).now().day_of_week == 6){ 
+          it.printf(Ycenter, jawY, id(jaweekfont), TextAlign::CENTER, "金");
+        }
+        if (id(homeassistant_time).now().day_of_week == 7){ 
+          it.printf(Ycenter, jawY, id(jaweekfont), TextAlign::CENTER, "土");
+        }
+                        
