--- a/designlayout.yaml
+++ b/designlayout.yaml
@@ -38,9 +38,9 @@ font:
        'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't',
        'u', 'v', 'w', 'x', 'y', 'z','å', 'ä', 'ö', '/','º','µ','³']    
     
-  - file: 'fonts/Roboto-Bold.ttf'
-    id: font_medium_28
-    size: 28
+  - file: 'fonts/Itim-Regular.ttf'
+    id: font_date
+    size: 35
 
   - file: 'fonts/materialdesignicons-webfont.ttf'
     id: icon_font_30
@@ -56,14 +56,14 @@ font:
 
   - file: 'fonts/Itim-Regular.ttf'
     id: clockfont
-    size: 80
+    size: 60
     glyphs:
       ['&', '@', '!', ',', '.', '"', '%', '’','(', ')', '+', '-', '_', ':', '°', '0',
        '1', '2', '3', '4', '5', '6', '7', '8', '9']  
 
   - file: 'fonts/KleeOne-SemiBold.ttf'
     id: jaweekfont
-    size: 85
+    size: 80
     glyphs:
       ['月','火','水','木','金','土','日']    
 
@@ -88,15 +88,73 @@ time:
           - component.update: epaper
 
 sensor:
-  - platform: homeassistant
-    entity_id: sensor.zigbee_33983_1_1_temperature
-    id: my_temp
-
+  # Kitchen
   - platform: homeassistant
     entity_id: sensor.kitchen_temperature
-    id: my_kitchen_temp
+    id: kitchen_temp
+  - platform: homeassistant
+    entity_id: sensor.kitchen_humidity
+    id: kitchen_hum
 
-    
+  # Living Room
+  - platform: homeassistant
+    entity_id: sensor.living_room_temperature
+    id: livingroom_temp
+  - platform: homeassistant
+    entity_id: sensor.living_room_humidity
+    id: livingroom_hum    
+
+  # Master Bedroom
+  - platform: homeassistant
+    entity_id: sensor.master_bedroom_temperature
+    id: mastbed_temp
+  - platform: homeassistant
+    entity_id: sensor.master_bedroom_humidity
+    id: mastbed_hum    
+
+  # Guest Bedroom
+  - platform: homeassistant
+    entity_id: sensor.guest_bedroom_temperature
+    id: guestbed_temp
+  - platform: homeassistant
+    entity_id: sensor.guest_bedroom_humidity
+    id: guestbed_hum  
+
+  # AL Studio
+  - platform: homeassistant
+    entity_id: sensor.al_studio_temperature
+    id: alstudio_temp
+  - platform: homeassistant
+    entity_id: sensor.al_studio_humidity
+    id: alstudio_hum  
+
+  # LG Studio
+  - platform: homeassistant
+    entity_id: sensor.lg_studio_temperature
+    id: lgstudio_temp
+  - platform: homeassistant
+    entity_id: sensor.lg_studio_humidity
+    id: lgstudio_hum  
+
+
+  # Attic
+  - platform: homeassistant
+    entity_id: sensor.zigbee_21602_1_1_temperature
+    id: attic_temp
+  - platform: homeassistant
+    entity_id: sensor.zigbee_21602_1_1_zigbee_21602_1_2_relative_humidity
+    id: attic_hum
+
+  # Server
+  - platform: homeassistant
+    entity_id: sensor.server_temp_temperature
+    id: server_temp
+  - platform: homeassistant
+    entity_id: sensor.server_hum_relative_humidity
+    id: server_hum
+
+
+
 
 binary_sensor:
   - platform: homeassistant
@@ -127,31 +185,55 @@ display:
     lambda: |-
       ESP_LOGI("display", "Updating...");
 
+      float kitchtemp = id(kitchen_temp).state;
+      float kitchhum = id(kitchen_hum).state;
+
+      float livingroomtemp = id(livingroom_temp).state;
+      float livingroomhum = id(livingroom_hum).state;
+
+      float mastbedtemp = id(mastbed_temp).state;
+      float mastbedhum = id(mastbed_hum).state;
+
+      float guestbedtemp = id(guestbed_temp).state;
+      float guestbedhum = id(guestbed_hum).state;
+
+      float alstudiotemp = id(alstudio_temp).state;
+      float alstudiohum = id(alstudio_hum).state;
+
+      float lgstudiotemp = id(lgstudio_temp).state;
+      float lgstudiohum = id(lgstudio_hum).state;
+
+      float attictemp = id(attic_temp).state;
+      float attichum = id(attic_hum).state;
+
+      float servertemp = id(server_temp).state;
+      float serverhum = id(server_hum).state;
+
       int Ycenter = 240;
-      int jawY = 260;
+      int jawY = 720;
       int enwY = 365;
-    
+      int grid_thick = 4;
+
       //Linee Verticali
-      it.line(Ycenter, 20, Ycenter, 150);
-      it.line(Ycenter, 390, Ycenter, 530);
+      //it.line(Ycenter, 20, Ycenter, 150);
+      //it.line(Ycenter, 390, Ycenter, 530);
       //Linee Orizzontali
-      it.line(20, 270, 120, 270);
-      it.line(360, 270, 460, 270);
+      //it.line(20, 270, 120, 270);
+      //it.line(360, 270, 460, 270);
 
-      it.circle(Ycenter, 270, 70);
+      it.circle(Ycenter, 730, 50);
 
-      //it.printf(Ycenter, 250, id(jaweekfont), TextAlign::CENTER, "月");
+ 
+      //low separator
+      it.filled_rectangle(40, 660, 400, 3);
 
-      it.filled_rectangle(40, 665, 400, 6);
+      //Date
+      it.strftime(107, 710 , id(font_date), TextAlign::CENTER, "%B %d", id(homeassistant_time).now());
+      it.strftime(107, 760 , id(font_date), TextAlign::CENTER, "%A", id(homeassistant_time).now());
 
-      //data
-      it.strftime(Ycenter, 175 , id(font_medium_28), TextAlign::CENTER, "%b %d - %A", id(homeassistant_time).now());
-      
-      //mettere temperatura esterna!
-      //it.strftime(Ycenter, enwY, id(font_medium_28), TextAlign::CENTER, "%B %A", id(homeassistant_time).now());
 
       //ora
-      it.strftime(Ycenter, 730 , id(clockfont), TextAlign::CENTER, "%H:%M", id(homeassistant_time).now());
+      it.strftime(373, 730 , id(clockfont), TextAlign::CENTER, "%H:%M", id(homeassistant_time).now());
       
 
       auto time_now = id(homeassistant_time).now().day_of_week;
@@ -177,3 +259,14 @@ display:
           it.printf(Ycenter, jawY, id(jaweekfont), TextAlign::CENTER, "土");
         }
                         
+
+
+      it.printf(Ycenter, 480, id(font_regular), TextAlign::CENTER , "Temp is %.1f°C and Hum is %.2f%%", kitchtemp, kitchhum);
+
+
+      it.filled_rectangle(0, 200, 480, grid_thick);
+      it.filled_rectangle(0, 400, 480, grid_thick);
+
+      it.filled_rectangle(120, 0, grid_thick, 400);
+      it.filled_rectangle(Ycenter, 0, grid_thick, 400);
+      it.filled_rectangle(360, 0, grid_thick, 400);      
